<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SighInActivity"
    android:background="@color/color_text">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/background"
            android:gravity="bottom">
            <ImageView
                android:layout_margin="20dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_account_box_black_24dp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:id="@+id/tv_"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_properties_basic"
                android:textSize="@dimen/text_size"
                android:textColor="@color/background"/>
            <EditText
                android:inputType="text"
                android:id="@+id/edt_name"
                android:layout_margin="5dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/hint_name"
                android:textSize="@dimen/text_size"
                android:layout_below="@id/tv_"
                android:background="@drawable/edittext_custom"/>
            <EditText
                android:textSize="@dimen/text_size"
                android:inputType="textEmailAddress"
                android:id="@+id/edt_email"
                android:paddingLeft="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/hint_email"
                android:layout_below="@id/edt_name"
                android:background="@drawable/edittext_custom"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">
            <TextView
                android:id="@+id/tv_out"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/tv_properties_owner"
                android:textColor="@color/background"/>
            <EditText
                android:textSize="@dimen/text_size"
                android:inputType="textPassword"
                android:id="@+id/edt_pass"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/hint_passworld"
                android:paddingLeft="10dp"
                android:layout_below="@id/tv_out"
                android:background="@drawable/edittext_custom"/>
            <EditText
                android:textSize="@dimen/text_size"
                android:inputType="number"
                android:id="@+id/edt_phone"
                android:paddingLeft="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/hint_phone"
                android:layout_below="@id/edt_pass"
                android:background="@drawable/edittext_custom"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingTop="30dp">
            <Button
                android:id="@+id/btndangky"
                android:layout_gravity="center"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_heighht"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_sightin"
                android:textAllCaps="false"
                android:textSize="@dimen/text_button_size"
                android:textColor="@color/color_text"
                android:background="@drawable/custom_buttom"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:gravity="bottom"
                android:id="@+id/tv_have_accout"
                android:textColor="@color/background"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_have_acout"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size"
                android:layout_below="@id/btndangky"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>